Add missing import

--- a/Second Year/Second Semester/Artificial Intelligence/AI_2024_lab_01.ipynb
+++ b/Second Year/Second Semester/Artificial Intelligence/AI_2024_lab_01.ipynb
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "0786890e",
    "metadata": {},
    "outputs": [
@@ -807,11 +807,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.27363\n"
+      "0.27583\n"
      ]
     }
    ],
    "source": [
+    "import random\n",
+    "\n",
     "trials = 100000\n",
     "length = 100\n",
     "radius = 30\n",
