--- a/Second Year/Second Semester/Artificial Intelligence/lab1.ipynb
+++ b/Second Year/Second Semester/Artificial Intelligence/lab1.ipynb
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "id": "together-ownership",
    "metadata": {},
    "outputs": [
@@ -716,9 +716,9 @@
     "    for index in range(size):\n",
     "        if variable < sum(probabilities[:index + 1]):\n",
     "            return index\n",
-    "    return -1   # Error.\n",
+    "    return None # Error.\n",
     "\n",
-    "print(spinner([0.5, 0.5]))"
+    "print(spinner([0.1, 0.9]))"
    ]
   },
   {
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 12,
    "id": "c66d572e",
    "metadata": {},
    "outputs": [
@@ -752,7 +752,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "blue\n"
+      "red\n"
      ]
     }
    ],
@@ -762,14 +762,14 @@
     "def spinner_colors(angles, colors):\n",
     "    size = len(angles)\n",
     "    if size != len(colors):\n",
-    "        return -1   # Error.\n",
+    "        return None # Error.\n",
     "\n",
     "    variable = random.random()\n",
     "    for index in range(size):\n",
     "        if variable < sum(angles[:index + 1]) / 360.0:\n",
     "            return colors[index]\n",
     "        \n",
-    "    return -1   # Error.\n",
+    "    return None # Error.\n",
     "\n",
     "print(spinner_colors([45, 85, 70, 160], [\"blue\", \"red\", \"yellow\", \"green\"]))"
    ]
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "0786890e",
    "metadata": {},
    "outputs": [
@@ -807,7 +807,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.27583\n"
+      "0.27634\n"
      ]
     }
    ],
