--- a/Second Year/Second Semester/Artificial Intelligence/lab3/book.ipynb
+++ b/Second Year/Second Semester/Artificial Intelligence/lab3/book.ipynb
@@ -544,9 +544,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'dtreeviz' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m viz \u001b[38;5;241m=\u001b[39m \u001b[43mdtreeviz\u001b[49m(tree_clf, \n\u001b[0;32m      2\u001b[0m                X_train,\n\u001b[0;32m      3\u001b[0m                y_train,\n\u001b[0;32m      4\u001b[0m                feature_names\u001b[38;5;241m=\u001b[39miris\u001b[38;5;241m.\u001b[39mfeature_names, \n\u001b[0;32m      5\u001b[0m                class_names\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msetosa\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mversicolor\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvirginica\u001b[39m\u001b[38;5;124m\"\u001b[39m],\n\u001b[0;32m      6\u001b[0m                scale\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m,\n\u001b[0;32m      7\u001b[0m                orientation\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLR\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m      8\u001b[0m \n\u001b[0;32m      9\u001b[0m                )\n\u001b[0;32m     10\u001b[0m viz\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'dtreeviz' is not defined"
+     ]
+    }
+   ],
    "source": [
     "viz = dtreeviz(tree_clf, \n",
     "               X_train,\n",
@@ -852,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -860,7 +872,8 @@
      "output_type": "stream",
      "text": [
       "Accuracy: 0.95\n",
-      "Best hyperparameters: {'max_depth': 2}\n"
+      "Best hyperparameters: {'max_depth': 2}\n",
+      "Tuned accuracy: 0.89\n"
      ]
     },
     {
@@ -873,7 +886,7 @@
        " Text(0.8, 0.16666666666666666, 'entropy = 0.172\\nsamples = 39\\nvalue = [0, 1, 38]')]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -934,6 +947,9 @@
     "    random_state=42\n",
     ") \n",
     "tree_classifier_tuned.fit(x_train, y_train)\n",
+    "y_pred = tree_classifier_tuned.predict(x_test)\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(\"Tuned accuracy: {:.2f}\".format(accuracy))\n",
     "\n",
     "plot_tree(tree_classifier_tuned)\n",
     "\n",
