--- a/Second Year/Second Semester/Artificial Intelligence/lab5.ipynb
+++ b/Second Year/Second Semester/Artificial Intelligence/lab5.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 342,
    "id": "e3614e5f",
    "metadata": {},
    "outputs": [
@@ -46,129 +46,104 @@
       "        [1., 0.],\n",
       "        [0., 1.]])\n",
       "\n",
-      "Epoch: 0, Max Loss: 0.27890267968177795, Min Loss: 0.25272318720817566\n",
-      "Epoch: 3000, Max Loss: 0.1455816626548767, Min Loss: 0.028080597519874573\n",
-      "Epoch: 6000, Max Loss: 0.06974738091230392, Min Loss: 0.002628481946885586\n",
-      "Epoch: 9000, Max Loss: 0.023361336439847946, Min Loss: 5.3513701914198464e-08\n",
+      "The best model ended training. It took 10 epochs.\n",
+      "\n",
       "Model: Sequential(\n",
       "  (lin1): Linear(in_features=2, out_features=5, bias=True)\n",
-      "  (sigmoid1): Sigmoid()\n",
+      "  (relu1): LeakyReLU(negative_slope=0.01)\n",
       "  (lin2): Linear(in_features=5, out_features=2, bias=True)\n",
-      "  (sigmoid2): Sigmoid()\n",
+      "  (sigmoid): Hardsigmoid()\n",
       ")\n",
-      "Result: [[6.5972335e-03 7.0805600e-06]\n",
-      " [9.9146867e-01 8.3521446e-03]\n",
-      " [9.9118441e-01 8.3116032e-03]\n",
-      " [1.2542469e-02 9.8300201e-01]]\n",
+      "Result: [[0.27324215 0.18309157]\n",
+      " [0.21545734 0.37857306]\n",
+      " [1.         0.        ]\n",
+      " [0.03136086 1.        ]]\n",
       "Expected result: [[0. 0.]\n",
       " [1. 0.]\n",
       " [1. 0.]\n",
       " [0. 1.]]\n",
-      "Loss: 9.73885107669048e-05\n",
-      "lin1.weight tensor([[-4.9447, -4.9342],\n",
-      "        [-4.2293, -4.3709],\n",
-      "        [-4.9547, -4.9262],\n",
-      "        [-5.2006, -5.2065],\n",
-      "        [-4.5331, -4.4151]])\n",
-      "lin1.bias tensor([2.0033, 1.9128, 6.8583, 7.2211, 1.8178])\n",
-      "lin2.weight tensor([[-4.4548, -4.8208,  6.3240,  5.7091, -4.6916],\n",
-      "        [-1.8232, -3.2224, -5.0061, -4.9798, -2.2793]])\n",
-      "lin2.bias tensor([-4.8747,  4.4941])\n",
-      "\n",
-      "\n",
-      "Model: Sequential(\n",
-      "  (lin1): Linear(in_features=2, out_features=5, bias=True)\n",
-      "  (sigmoid1): Hardsigmoid()\n",
-      "  (lin2): Linear(in_features=5, out_features=2, bias=True)\n",
-      "  (sigmoid2): Hardsigmoid()\n",
-      ")\n",
-      "Result: [[0.11370122 0.        ]\n",
-      " [0.88625604 0.        ]\n",
-      " [0.88625294 0.        ]\n",
-      " [0.11383887 1.        ]]\n",
-      "Expected result: [[0. 0.]\n",
-      " [1. 0.]\n",
-      " [1. 0.]\n",
-      " [0. 1.]]\n",
-      "Loss: 0.006470417138189077\n",
-      "lin1.weight tensor([[-2.5877, -2.4547],\n",
-      "        [-2.0281, -1.9824],\n",
-      "        [-6.0057, -6.0058],\n",
-      "        [-2.6238, -3.0623],\n",
-      "        [-2.8343, -2.6037]])\n",
-      "lin1.bias tensor([2.0552, 1.0186, 3.0049, 2.6987, 2.4427])\n",
-      "lin2.weight tensor([[ 3.1475,  2.6278, -9.2698,  2.6143,  2.6368],\n",
-      "        [-3.6554, -3.2838, -2.8949, -3.8564, -3.4796]])\n",
-      "lin2.bias tensor([-2.3347,  3.0386])\n",
+      "Loss: 0.10849901288747787\n",
+      "Accuracy: 0.8915009871125221\n",
+      "lin1.weight tensor([[-2.2983, -0.3815],\n",
+      "        [-1.5358, -2.9742],\n",
+      "        [ 0.3599, -1.4606],\n",
+      "        [ 2.5967,  1.7662],\n",
+      "        [ 2.3621, -2.7614]])\n",
+      "lin1.bias tensor([-1.6014, -0.8904, -1.4658, -1.2114, -0.7165])\n",
+      "lin2.weight tensor([[ 1.5397e+00, -1.4375e+00,  1.3366e+00, -4.5674e-01,  3.8064e+00],\n",
+      "        [ 5.6561e-01, -2.0724e+00,  1.4918e-03,  1.8001e+00, -3.3616e+00]])\n",
+      "lin2.bias tensor([-1.3074, -1.9131])\n",
       "\n",
       "\n",
       "Model: Sequential(\n",
       "  (lin1): Linear(in_features=2, out_features=7, bias=True)\n",
-      "  (sigmoid1): Hardsigmoid()\n",
+      "  (relu1): LeakyReLU(negative_slope=0.01)\n",
       "  (lin2): Linear(in_features=7, out_features=2, bias=True)\n",
-      "  (sigmoid2): Hardsigmoid()\n",
+      "  (sigmoid): Hardsigmoid()\n",
       ")\n",
-      "Result: [[7.5220190e-02 0.0000000e+00]\n",
-      " [9.2477489e-01 2.9404957e-06]\n",
-      " [9.2477107e-01 0.0000000e+00]\n",
-      " [7.5235128e-02 1.0000000e+00]]\n",
+      "Result: [[0.         0.        ]\n",
+      " [0.7047367  0.06119748]\n",
+      " [1.         0.        ]\n",
+      " [0.         1.        ]]\n",
       "Expected result: [[0. 0.]\n",
       " [1. 0.]\n",
       " [1. 0.]\n",
       " [0. 1.]]\n",
-      "Loss: 0.002829576376825571\n",
-      "lin1.weight tensor([[-2.8605, -2.3621],\n",
-      "        [-2.3733, -2.6162],\n",
-      "        [ 2.5147,  2.7917],\n",
-      "        [-2.5341, -2.5251],\n",
-      "        [-2.0436, -2.7728],\n",
-      "        [-3.0629, -2.1458],\n",
-      "        [-6.0063, -6.0066]])\n",
-      "lin1.bias tensor([ 2.2523,  1.9943, -2.3258,  2.0857,  1.8278,  2.2252,  3.0045])\n",
-      "lin2.weight tensor([[  2.2289,   1.8092,  -2.1861,   2.0227,   2.1369,   1.6076, -10.1945],\n",
-      "        [ -2.3216,  -2.6946,   2.7479,  -2.2547,  -2.1657,  -1.9782,  -1.5490]])\n",
-      "lin2.bias tensor([-0.3994,  0.3183])\n",
+      "Loss: 0.011365693062543869\n",
+      "Accuracy: 0.9886343069374561\n",
+      "lin1.weight tensor([[-1.6051, -2.1247],\n",
+      "        [ 1.7421,  1.3328],\n",
+      "        [-1.4955, -1.6694],\n",
+      "        [ 2.4542, -2.4726],\n",
+      "        [-1.4919, -2.8280],\n",
+      "        [-1.8730, -0.2570],\n",
+      "        [ 1.7459,  1.7121]])\n",
+      "lin1.bias tensor([-2.8040, -1.4364, -2.8294, -0.2230,  2.6548, -2.1100, -1.6848])\n",
+      "lin2.weight tensor([[-3.0731, -1.4331, -2.1705,  2.7923, -1.6582,  1.0546, -1.5937],\n",
+      "        [ 1.5135,  3.3103,  1.9226, -1.9836, -4.0759, -2.0502,  2.9402]])\n",
+      "lin2.bias tensor([ 1.1188, -2.6579])\n",
       "\n",
       "\n",
       "Model: Sequential(\n",
       "  (lin1): Linear(in_features=2, out_features=10, bias=True)\n",
-      "  (sigmoid1): Hardsigmoid()\n",
+      "  (relu1): LeakyReLU(negative_slope=0.01)\n",
       "  (lin2): Linear(in_features=10, out_features=2, bias=True)\n",
-      "  (sigmoid2): Hardsigmoid()\n",
+      "  (sigmoid): Hardsigmoid()\n",
       ")\n",
-      "Result: [[0.04317363 0.        ]\n",
-      " [0.9568179  0.        ]\n",
-      " [0.9568153  0.        ]\n",
-      " [0.04321365 1.        ]]\n",
+      "Result: [[0.         0.        ]\n",
+      " [0.81550616 0.        ]\n",
+      " [0.8269116  0.        ]\n",
+      " [0.03249653 1.        ]]\n",
       "Expected result: [[0. 0.]\n",
       " [1. 0.]\n",
       " [1. 0.]\n",
       " [0. 1.]]\n",
-      "Loss: 0.00093262386508286\n",
-      "lin1.weight tensor([[-1.4769, -2.5729],\n",
-      "        [-2.1391, -2.2587],\n",
-      "        [-1.7661, -1.9417],\n",
-      "        [-6.0049, -6.0054],\n",
-      "        [-1.6402, -1.8021],\n",
-      "        [-2.1244, -2.1202],\n",
-      "        [-1.8576, -1.6240],\n",
-      "        [-2.0533, -1.4262],\n",
-      "        [-2.8223, -1.6760],\n",
-      "        [-1.6263, -1.9426]])\n",
-      "lin1.bias tensor([1.0519, 1.4153, 0.7266, 3.0038, 0.4507, 1.2677, 0.4982, 0.4895, 1.4991,\n",
-      "        0.5782])\n",
-      "lin2.weight tensor([[  1.8749,   1.8996,   2.2837, -10.9635,   1.6410,   1.7566,   2.1632,\n",
-      "           1.7436,   1.7101,   1.9528],\n",
-      "        [ -2.2510,  -2.2118,  -2.1184,  -0.9387,  -2.0226,  -2.0622,  -1.7476,\n",
-      "          -1.9627,  -2.0874,  -2.0903]])\n",
-      "lin2.bias tensor([-2.7753,  3.0414])\n",
+      "Loss: 0.00813169777393341\n",
+      "Accuracy: 0.9918683022260666\n",
+      "lin1.weight tensor([[ 2.0352,  2.0262],\n",
+      "        [-2.4669, -1.6894],\n",
+      "        [-1.9145, -1.6512],\n",
+      "        [-1.6485, -1.9959],\n",
+      "        [-1.1689, -1.7789],\n",
+      "        [-1.7671, -1.3980],\n",
+      "        [-1.7674,  0.3612],\n",
+      "        [-1.1820, -1.4220],\n",
+      "        [-2.6933, -2.7018],\n",
+      "        [-1.2804, -1.3828]])\n",
+      "lin1.bias tensor([-2.2141, -0.9991, -1.2012, -1.9990, -2.0871, -1.7665, -0.5496, -2.3990,\n",
+      "         2.2952,  2.5832])\n",
+      "lin2.weight tensor([[-2.0133,  1.7448,  1.5435,  1.4661, -0.8649,  2.0256, -0.6691, -0.8309,\n",
+      "         -3.2210,  0.8002],\n",
+      "        [ 3.3188, -2.3673, -2.1843, -2.2344, -1.3820, -1.8238, -1.1412, -0.4903,\n",
+      "         -3.6357, -3.9935]])\n",
+      "lin2.bias tensor([ 1.0628, -2.3777])\n",
       "\n",
       "\n",
       "Model: Sequential(\n",
       "  (lin1): Linear(in_features=2, out_features=15, bias=True)\n",
-      "  (sigmoid1): Hardsigmoid()\n",
+      "  (relu1): LeakyReLU(negative_slope=0.01)\n",
       "  (lin2): Linear(in_features=15, out_features=2, bias=True)\n",
-      "  (sigmoid2): Hardsigmoid()\n",
+      "  (sigmoid): Hardsigmoid()\n",
       ")\n",
       "Result: [[0. 0.]\n",
       " [1. 0.]\n",
@@ -179,28 +154,64 @@
       " [1. 0.]\n",
       " [0. 1.]]\n",
       "Loss: 0.0\n",
-      "lin1.weight tensor([[-1.7191, -1.8881],\n",
-      "        [-5.6888, -5.6888],\n",
-      "        [-2.1125, -1.7155],\n",
-      "        [-2.1348, -1.9853],\n",
-      "        [-5.7006, -5.7006],\n",
-      "        [-1.8805, -2.4325],\n",
-      "        [ 1.9366,  1.9270],\n",
-      "        [-1.8207, -2.1354],\n",
-      "        [-2.8546, -2.1732],\n",
-      "        [-2.2422, -1.7327],\n",
-      "        [ 1.2538,  2.4172],\n",
-      "        [-2.7357, -2.1329],\n",
-      "        [-2.3412, -1.5236],\n",
-      "        [-2.2084, -1.7861],\n",
-      "        [-1.3543, -2.4866]])\n",
-      "lin1.bias tensor([ 0.6086,  2.6888,  0.8307,  1.1207,  2.7006,  1.3152, -0.8663,  0.9585,\n",
-      "         2.0300,  0.9751, -0.6733,  1.8710,  0.8654,  0.9964,  0.8429])\n",
-      "lin2.weight tensor([[ 1.4579, -6.1958,  1.3952,  1.6088, -6.4482,  1.5858, -1.3917,  1.1371,\n",
-      "          1.1744,  1.3391, -1.3082,  1.2281,  1.2451,  1.4168,  1.4531],\n",
-      "        [-1.2960, -0.8181, -1.4966, -1.2847, -1.1875, -1.5333,  1.5117, -1.4102,\n",
-      "         -1.4177, -1.1885,  1.2912, -1.3677, -0.9914, -1.4170, -1.5050]])\n",
-      "lin2.bias tensor([-0.3056,  0.2145])\n",
+      "Accuracy: 1.0\n",
+      "lin1.weight tensor([[-1.4146, -1.5524],\n",
+      "        [ 0.3096, -1.1932],\n",
+      "        [ 0.2543, -3.2596],\n",
+      "        [-4.6158, -1.4240],\n",
+      "        [-2.1772,  1.2534],\n",
+      "        [-1.8614, -0.8503],\n",
+      "        [-1.5967, -1.9251],\n",
+      "        [-0.5131, -2.0120],\n",
+      "        [-1.5129, -2.0611],\n",
+      "        [ 2.3017,  1.6369],\n",
+      "        [-2.2769, -2.3179],\n",
+      "        [ 2.3379, -2.7619],\n",
+      "        [ 3.3344,  0.5379],\n",
+      "        [-1.5286, -1.7444],\n",
+      "        [-0.3186, -1.1995]])\n",
+      "lin1.bias tensor([-2.3353, -1.2274,  2.3314,  2.0528,  1.0750, -2.0404,  1.0407, -1.6697,\n",
+      "        -1.5734, -1.3682,  1.7390,  0.2960, -1.1004, -2.6928, -2.2366])\n",
+      "lin2.weight tensor([[-1.4679,  0.6448, -1.5196,  0.4515,  1.4474, -0.8149, -1.4278, -0.5355,\n",
+      "          1.6300, -1.3499, -2.9680,  4.2003, -0.9801, -1.3317,  1.0405],\n",
+      "        [ 0.2581, -0.5991, -2.8294, -3.7152, -0.8850,  0.5566, -1.6656,  0.1662,\n",
+      "         -2.0455,  2.6381, -0.6325, -1.7861,  1.9187,  0.7036,  0.2633]])\n",
+      "lin2.bias tensor([ 0.8234, -1.1652])\n",
+      "\n",
+      "\n",
+      "Model: Sequential(\n",
+      "  (lin1): Linear(in_features=2, out_features=5, bias=True)\n",
+      "  (relu1): LeakyReLU(negative_slope=0.01)\n",
+      "  (lin2): Linear(in_features=5, out_features=5, bias=True)\n",
+      "  (relu2): LeakyReLU(negative_slope=0.01)\n",
+      "  (lin3): Linear(in_features=5, out_features=2, bias=True)\n",
+      "  (sigmoid): Hardsigmoid()\n",
+      ")\n",
+      "Result: [[0.30116844 0.33642998]\n",
+      " [1.         0.        ]\n",
+      " [0.30013478 0.33620414]\n",
+      " [0.30063227 0.3365716 ]]\n",
+      "Expected result: [[0. 0.]\n",
+      " [1. 0.]\n",
+      " [1. 0.]\n",
+      " [0. 1.]]\n",
+      "Loss: 0.1671561449766159\n",
+      "Accuracy: 0.8328438550233841\n",
+      "lin1.weight tensor([[-2.6258,  1.8714],\n",
+      "        [-1.9150, -3.6296],\n",
+      "        [-2.2789, -0.6227],\n",
+      "        [-1.6293, -1.7641],\n",
+      "        [-0.0704, -0.3258]])\n",
+      "lin1.bias tensor([-0.3203, -2.6091, -0.8341, -2.7624, -3.1524])\n",
+      "lin2.weight tensor([[ 0.6844,  1.9974, -1.0400, -1.4740,  2.0744],\n",
+      "        [-2.3442,  2.1281, -1.0044, -1.2404,  2.1003],\n",
+      "        [-1.9618,  2.1495, -2.6486, -1.6936,  2.1012],\n",
+      "        [ 4.5005,  4.1493, -0.4979,  2.3619,  0.1551],\n",
+      "        [-1.8225, -1.9260, -2.0909,  2.1270,  2.3706]])\n",
+      "lin2.bias tensor([-2.1486, -2.2978, -2.1015, -0.2003, -2.1519])\n",
+      "lin3.weight tensor([[-2.4003, -2.4843, -1.7597,  1.5607,  0.3362],\n",
+      "        [-0.0530,  0.5883, -2.3684, -1.0010, -1.7543]])\n",
+      "lin3.bias tensor([-1.3294, -1.0622])\n",
       "\n",
       "\n"
      ]
@@ -225,44 +236,48 @@
     "models = [\n",
     "    nn.Sequential(OrderedDict([\n",
     "        ('lin1', nn.Linear(2, 5)),\n",
-    "        ('sigmoid1', nn.Sigmoid()),\n",
+    "        ('relu1', nn.LeakyReLU()),\n",
     "        ('lin2', nn.Linear(5, 2)),\n",
-    "        ('sigmoid2', nn.Sigmoid())\n",
-    "    ])),\n",
-    "    nn.Sequential(OrderedDict([\n",
-    "        ('lin1', nn.Linear(2, 5)),\n",
-    "        ('sigmoid1', nn.Hardsigmoid()),\n",
-    "        ('lin2', nn.Linear(5, 2)),\n",
-    "        ('sigmoid2', nn.Hardsigmoid())   # This has better results than Sigmoid.\n",
+    "        ('sigmoid', nn.Hardsigmoid()) \n",
     "    ])),\n",
     "    nn.Sequential(OrderedDict([\n",
     "        ('lin1', nn.Linear(2, 7)),\n",
-    "        ('sigmoid1', nn.Hardsigmoid()),\n",
+    "        ('relu1', nn.LeakyReLU()),\n",
     "        ('lin2', nn.Linear(7, 2)),\n",
-    "        ('sigmoid2', nn.Hardsigmoid())\n",
+    "        ('sigmoid', nn.Hardsigmoid()) \n",
     "    ])),\n",
     "    nn.Sequential(OrderedDict([\n",
     "        ('lin1', nn.Linear(2, 10)),\n",
-    "        ('sigmoid1', nn.Hardsigmoid()),\n",
+    "        ('relu1', nn.LeakyReLU()),\n",
     "        ('lin2', nn.Linear(10, 2)),\n",
-    "        ('sigmoid2', nn.Hardsigmoid())\n",
+    "        ('sigmoid', nn.Hardsigmoid()) \n",
     "    ])),\n",
     "    nn.Sequential(OrderedDict([\n",
     "        ('lin1', nn.Linear(2, 15)),\n",
-    "        ('sigmoid1', nn.Hardsigmoid()),\n",
+    "        ('relu1', nn.LeakyReLU()),\n",
     "        ('lin2', nn.Linear(15, 2)),\n",
-    "        ('sigmoid2', nn.Hardsigmoid())\n",
+    "        ('sigmoid', nn.Hardsigmoid()) \n",
     "    ])),\n",
+    "    nn.Sequential(OrderedDict([\n",
+    "        ('lin1', nn.Linear(2, 5)),\n",
+    "        ('relu1', nn.LeakyReLU()),\n",
+    "        ('lin2', nn.Linear(5, 5)),\n",
+    "        ('relu2', nn.LeakyReLU()),\n",
+    "        ('lin3', nn.Linear(5, 2)),\n",
+    "        ('sigmoid', nn.Hardsigmoid()) \n",
+    "    ]))\n",
     "]\n",
     "\n",
     "# Optimizers and stuff.\n",
     "criterion = nn.MSELoss()                                                # MSE Loss\n",
     "optimizers = []                                                         # List of optimizers\n",
     "for model in models:\n",
-    "    optimizers.append(torch.optim.Adam(model.parameters()))\n",
+    "    optimizers.append(torch.optim.Adam(model.parameters(), lr=0.5))\n",
     "\n",
     "# Train the models\n",
-    "for epoch in range(12000):\n",
+    "epoch = 0\n",
+    "while True:\n",
+    "    epoch = 1 + epoch\n",
     "    maxLoss = 0\n",
     "    minLoss = 1\n",
     "    for model, optimizer in zip(models, optimizers):\n",
@@ -273,10 +288,13 @@
     "        optimizer.step()\n",
     "        maxLoss = max(maxLoss, loss.item())\n",
     "        minLoss = min(minLoss, loss.item())\n",
-    "    if epoch % 3000 == 0:\n",
+    "    if minLoss == 0:\n",
+    "            break\n",
+    "    if epoch % 10 == 0:\n",
     "        print(\"Epoch: \" + str(epoch) + \", Max Loss: \" + str(maxLoss) + \", Min Loss: \" + str(minLoss))\n",
     "\n",
     "# Print model weights and results.\n",
+    "print(\"The best model ended training. It took \" + str(epoch) + \" epochs.\\n\")\n",
     "for model in models:\n",
     "    result = model(data_in)\n",
     "    loss = criterion(result, data_target)\n",
@@ -284,6 +302,7 @@
     "    print(\"Result: \" + str(result.detach().numpy()))\n",
     "    print(\"Expected result: \" + str(data_target.numpy()))\n",
     "    print(\"Loss: \" + str(loss.item()))\n",
+    "    print(\"Accuracy: \" + str(1 - loss.item()))\n",
     "    for name, param in model.named_parameters():\n",
     "        if param.requires_grad:\n",
     "            print(name, param.data)\n",
