--- a/Second Year/Second Semester/Artificial Intelligence/lab5.ipynb
+++ b/Second Year/Second Semester/Artificial Intelligence/lab5.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 92,
    "id": "e3614e5f",
    "metadata": {},
    "outputs": [
@@ -46,7 +46,8 @@
       "        [1., 0.],\n",
       "        [0., 1.]])\n",
       "\n",
-      "The best model ended training. It took 10 epochs.\n",
+      "Epoch: 10, Max Loss: 0.1602407544851303, Min Loss: 0.0034742618445307016\n",
+      "The best model ended training. It took 12 epochs.\n",
       "\n",
       "Model: Sequential(\n",
       "  (lin1): Linear(in_features=2, out_features=5, bias=True)\n",
@@ -54,25 +55,25 @@
       "  (lin2): Linear(in_features=5, out_features=2, bias=True)\n",
       "  (sigmoid): Hardsigmoid()\n",
       ")\n",
-      "Result: [[0.27324215 0.18309157]\n",
-      " [0.21545734 0.37857306]\n",
-      " [1.         0.        ]\n",
-      " [0.03136086 1.        ]]\n",
+      "Result: [[0.6564112  0.        ]\n",
+      " [0.64454406 0.        ]\n",
+      " [0.6391348  0.        ]\n",
+      " [0.         1.        ]]\n",
       "Expected result: [[0. 0.]\n",
       " [1. 0.]\n",
       " [1. 0.]\n",
       " [0. 1.]]\n",
-      "Loss: 0.10849901288747787\n",
-      "Accuracy: 0.8915009871125221\n",
-      "lin1.weight tensor([[-2.2983, -0.3815],\n",
-      "        [-1.5358, -2.9742],\n",
-      "        [ 0.3599, -1.4606],\n",
-      "        [ 2.5967,  1.7662],\n",
-      "        [ 2.3621, -2.7614]])\n",
-      "lin1.bias tensor([-1.6014, -0.8904, -1.4658, -1.2114, -0.7165])\n",
-      "lin2.weight tensor([[ 1.5397e+00, -1.4375e+00,  1.3366e+00, -4.5674e-01,  3.8064e+00],\n",
-      "        [ 5.6561e-01, -2.0724e+00,  1.4918e-03,  1.8001e+00, -3.3616e+00]])\n",
-      "lin2.bias tensor([-1.3074, -1.9131])\n",
+      "Loss: 0.08593103289604187\n",
+      "Accuracy: 0.9140689671039581\n",
+      "lin1.weight tensor([[ 1.3893,  1.3606],\n",
+      "        [-2.6761, -2.5410],\n",
+      "        [-2.1244, -1.9792],\n",
+      "        [ 2.2022,  2.1130],\n",
+      "        [-1.4865, -1.8270]])\n",
+      "lin1.bias tensor([-1.3292, -1.8262, -2.0961, -2.3019, -3.3766])\n",
+      "lin2.weight tensor([[-0.6854,  0.7079,  1.4176, -1.8130, -2.3967],\n",
+      "        [ 0.9465, -2.3067, -2.1680,  3.9906,  2.5287]])\n",
+      "lin2.bias tensor([ 0.8493, -4.1926])\n",
       "\n",
       "\n",
       "Model: Sequential(\n",
@@ -81,27 +82,27 @@
       "  (lin2): Linear(in_features=7, out_features=2, bias=True)\n",
       "  (sigmoid): Hardsigmoid()\n",
       ")\n",
-      "Result: [[0.         0.        ]\n",
-      " [0.7047367  0.06119748]\n",
-      " [1.         0.        ]\n",
-      " [0.         1.        ]]\n",
+      "Result: [[0. 0.]\n",
+      " [1. 0.]\n",
+      " [1. 0.]\n",
+      " [0. 1.]]\n",
       "Expected result: [[0. 0.]\n",
       " [1. 0.]\n",
       " [1. 0.]\n",
       " [0. 1.]]\n",
-      "Loss: 0.011365693062543869\n",
-      "Accuracy: 0.9886343069374561\n",
-      "lin1.weight tensor([[-1.6051, -2.1247],\n",
-      "        [ 1.7421,  1.3328],\n",
-      "        [-1.4955, -1.6694],\n",
-      "        [ 2.4542, -2.4726],\n",
-      "        [-1.4919, -2.8280],\n",
-      "        [-1.8730, -0.2570],\n",
-      "        [ 1.7459,  1.7121]])\n",
-      "lin1.bias tensor([-2.8040, -1.4364, -2.8294, -0.2230,  2.6548, -2.1100, -1.6848])\n",
-      "lin2.weight tensor([[-3.0731, -1.4331, -2.1705,  2.7923, -1.6582,  1.0546, -1.5937],\n",
-      "        [ 1.5135,  3.3103,  1.9226, -1.9836, -4.0759, -2.0502,  2.9402]])\n",
-      "lin2.bias tensor([ 1.1188, -2.6579])\n",
+      "Loss: 0.0\n",
+      "Accuracy: 1.0\n",
+      "lin1.weight tensor([[ 1.1930,  1.1544],\n",
+      "        [ 0.6071,  2.3009],\n",
+      "        [ 2.0884,  1.3795],\n",
+      "        [-3.6774,  0.6787],\n",
+      "        [ 2.6053, -3.0984],\n",
+      "        [-2.4773, -3.4314],\n",
+      "        [-1.5597, -2.1970]])\n",
+      "lin1.bias tensor([-1.1879, -0.1903, -1.5146,  2.1276, -0.9238,  2.8153, -2.1254])\n",
+      "lin2.weight tensor([[-1.7426,  1.2163, -2.5415,  1.5867,  4.0232, -3.4242,  0.2714],\n",
+      "        [ 1.3825,  1.7247,  2.3628, -4.1866, -4.0701, -2.1516, -2.3930]])\n",
+      "lin2.bias tensor([-0.0685, -2.1027])\n",
       "\n",
       "\n",
       "Model: Sequential(\n",
@@ -110,33 +111,33 @@
       "  (lin2): Linear(in_features=10, out_features=2, bias=True)\n",
       "  (sigmoid): Hardsigmoid()\n",
       ")\n",
-      "Result: [[0.         0.        ]\n",
-      " [0.81550616 0.        ]\n",
-      " [0.8269116  0.        ]\n",
-      " [0.03249653 1.        ]]\n",
+      "Result: [[0.48521224 0.        ]\n",
+      " [0.5725186  0.04463995]\n",
+      " [0.67216945 0.2761825 ]\n",
+      " [0.3014524  1.        ]]\n",
       "Expected result: [[0. 0.]\n",
       " [1. 0.]\n",
       " [1. 0.]\n",
       " [0. 1.]]\n",
-      "Loss: 0.00813169777393341\n",
-      "Accuracy: 0.9918683022260666\n",
-      "lin1.weight tensor([[ 2.0352,  2.0262],\n",
-      "        [-2.4669, -1.6894],\n",
-      "        [-1.9145, -1.6512],\n",
-      "        [-1.6485, -1.9959],\n",
-      "        [-1.1689, -1.7789],\n",
-      "        [-1.7671, -1.3980],\n",
-      "        [-1.7674,  0.3612],\n",
-      "        [-1.1820, -1.4220],\n",
-      "        [-2.6933, -2.7018],\n",
-      "        [-1.2804, -1.3828]])\n",
-      "lin1.bias tensor([-2.2141, -0.9991, -1.2012, -1.9990, -2.0871, -1.7665, -0.5496, -2.3990,\n",
-      "         2.2952,  2.5832])\n",
-      "lin2.weight tensor([[-2.0133,  1.7448,  1.5435,  1.4661, -0.8649,  2.0256, -0.6691, -0.8309,\n",
-      "         -3.2210,  0.8002],\n",
-      "        [ 3.3188, -2.3673, -2.1843, -2.2344, -1.3820, -1.8238, -1.1412, -0.4903,\n",
-      "         -3.6357, -3.9935]])\n",
-      "lin2.bias tensor([ 1.0628, -2.3777])\n",
+      "Loss: 0.08684840053319931\n",
+      "Accuracy: 0.9131515994668007\n",
+      "lin1.weight tensor([[ 1.5471,  0.9572],\n",
+      "        [ 1.3742,  1.4701],\n",
+      "        [ 1.7464,  1.1426],\n",
+      "        [-2.3231, -1.9164],\n",
+      "        [-0.6883, -0.8341],\n",
+      "        [ 1.9922,  1.2677],\n",
+      "        [-2.1572, -0.9614],\n",
+      "        [ 0.1032,  0.2996],\n",
+      "        [ 0.5941,  0.3073],\n",
+      "        [-1.6294, -1.9106]])\n",
+      "lin1.bias tensor([-2.8769, -1.6088, -3.1997, -2.3639,  1.4151, -0.7666, -2.1346, -1.5183,\n",
+      "        -1.3131, -2.9061])\n",
+      "lin2.weight tensor([[ 0.5248, -2.7717,  0.7584,  0.4963, -0.1062,  0.8607,  1.1399,  0.2882,\n",
+      "          0.6584, -2.1995],\n",
+      "        [ 3.3173,  3.0662,  3.7472, -2.1576, -0.9989,  2.0096, -2.1201,  1.2011,\n",
+      "          0.5950,  2.2399]])\n",
+      "lin2.bias tensor([ 0.0480, -3.0433])\n",
       "\n",
       "\n",
       "Model: Sequential(\n",
@@ -155,28 +156,28 @@
       " [0. 1.]]\n",
       "Loss: 0.0\n",
       "Accuracy: 1.0\n",
-      "lin1.weight tensor([[-1.4146, -1.5524],\n",
-      "        [ 0.3096, -1.1932],\n",
-      "        [ 0.2543, -3.2596],\n",
-      "        [-4.6158, -1.4240],\n",
-      "        [-2.1772,  1.2534],\n",
-      "        [-1.8614, -0.8503],\n",
-      "        [-1.5967, -1.9251],\n",
-      "        [-0.5131, -2.0120],\n",
-      "        [-1.5129, -2.0611],\n",
-      "        [ 2.3017,  1.6369],\n",
-      "        [-2.2769, -2.3179],\n",
-      "        [ 2.3379, -2.7619],\n",
-      "        [ 3.3344,  0.5379],\n",
-      "        [-1.5286, -1.7444],\n",
-      "        [-0.3186, -1.1995]])\n",
-      "lin1.bias tensor([-2.3353, -1.2274,  2.3314,  2.0528,  1.0750, -2.0404,  1.0407, -1.6697,\n",
-      "        -1.5734, -1.3682,  1.7390,  0.2960, -1.1004, -2.6928, -2.2366])\n",
-      "lin2.weight tensor([[-1.4679,  0.6448, -1.5196,  0.4515,  1.4474, -0.8149, -1.4278, -0.5355,\n",
-      "          1.6300, -1.3499, -2.9680,  4.2003, -0.9801, -1.3317,  1.0405],\n",
-      "        [ 0.2581, -0.5991, -2.8294, -3.7152, -0.8850,  0.5566, -1.6656,  0.1662,\n",
-      "         -2.0455,  2.6381, -0.6325, -1.7861,  1.9187,  0.7036,  0.2633]])\n",
-      "lin2.bias tensor([ 0.8234, -1.1652])\n",
+      "lin1.weight tensor([[ 2.1715,  0.6451],\n",
+      "        [ 1.6613,  2.2715],\n",
+      "        [-1.0505, -0.6540],\n",
+      "        [-2.5197, -3.0971],\n",
+      "        [-2.9945, -2.3514],\n",
+      "        [-2.6261, -2.4735],\n",
+      "        [-2.8245, -3.1890],\n",
+      "        [-2.2377, -2.2252],\n",
+      "        [-1.9650,  2.5814],\n",
+      "        [ 0.6834,  0.6209],\n",
+      "        [ 0.7295, -2.2757],\n",
+      "        [-1.8106, -1.8122],\n",
+      "        [-3.9325, -1.7946],\n",
+      "        [ 2.1865,  1.3064],\n",
+      "        [ 1.3466, -2.9441]])\n",
+      "lin1.bias tensor([-1.6933, -1.3366,  2.3736, -0.7122, -2.0749, -1.8171,  3.2531, -1.6620,\n",
+      "        -1.5890, -1.1238,  1.1683,  0.5835, -2.2223, -1.3386,  0.4849])\n",
+      "lin2.weight tensor([[-0.4283, -1.9007,  1.5570,  1.2893, -2.0780,  0.4191, -4.5178,  1.0798,\n",
+      "          0.8742, -0.4686,  1.0220,  0.6044,  1.4446, -1.3436,  4.0580],\n",
+      "        [ 1.0095,  1.7849, -2.0941, -2.2274, -2.4374, -2.2231, -3.0004, -2.1015,\n",
+      "         -1.7563,  0.5376, -0.2628, -1.4152, -2.3795,  0.9323, -2.3415]])\n",
+      "lin2.bias tensor([ 2.2061, -2.3566])\n",
       "\n",
       "\n",
       "Model: Sequential(\n",
@@ -187,31 +188,31 @@
       "  (lin3): Linear(in_features=5, out_features=2, bias=True)\n",
       "  (sigmoid): Hardsigmoid()\n",
       ")\n",
-      "Result: [[0.30116844 0.33642998]\n",
+      "Result: [[0.         0.        ]\n",
       " [1.         0.        ]\n",
-      " [0.30013478 0.33620414]\n",
-      " [0.30063227 0.3365716 ]]\n",
+      " [0.5818082  0.34672412]\n",
+      " [0.5956091  0.33435336]]\n",
       "Expected result: [[0. 0.]\n",
       " [1. 0.]\n",
       " [1. 0.]\n",
       " [0. 1.]]\n",
-      "Loss: 0.1671561449766159\n",
-      "Accuracy: 0.8328438550233841\n",
-      "lin1.weight tensor([[-2.6258,  1.8714],\n",
-      "        [-1.9150, -3.6296],\n",
-      "        [-2.2789, -0.6227],\n",
-      "        [-1.6293, -1.7641],\n",
-      "        [-0.0704, -0.3258]])\n",
-      "lin1.bias tensor([-0.3203, -2.6091, -0.8341, -2.7624, -3.1524])\n",
-      "lin2.weight tensor([[ 0.6844,  1.9974, -1.0400, -1.4740,  2.0744],\n",
-      "        [-2.3442,  2.1281, -1.0044, -1.2404,  2.1003],\n",
-      "        [-1.9618,  2.1495, -2.6486, -1.6936,  2.1012],\n",
-      "        [ 4.5005,  4.1493, -0.4979,  2.3619,  0.1551],\n",
-      "        [-1.8225, -1.9260, -2.0909,  2.1270,  2.3706]])\n",
-      "lin2.bias tensor([-2.1486, -2.2978, -2.1015, -0.2003, -2.1519])\n",
-      "lin3.weight tensor([[-2.4003, -2.4843, -1.7597,  1.5607,  0.3362],\n",
-      "        [-0.0530,  0.5883, -2.3684, -1.0010, -1.7543]])\n",
-      "lin3.bias tensor([-1.3294, -1.0622])\n",
+      "Loss: 0.13661721348762512\n",
+      "Accuracy: 0.8633827865123749\n",
+      "lin1.weight tensor([[-2.2781,  1.1812],\n",
+      "        [-0.5291, -0.5192],\n",
+      "        [-0.5837, -2.7544],\n",
+      "        [ 2.4717, -1.0404],\n",
+      "        [-1.8856, -0.9995]])\n",
+      "lin1.bias tensor([ 0.6905, -1.9869,  2.0131, -0.3346,  0.5921])\n",
+      "lin2.weight tensor([[-0.5711, -0.6734, -1.1066, -1.3278, -2.6323],\n",
+      "        [ 0.6562, -1.1191,  2.8223, -3.5249,  0.6528],\n",
+      "        [-1.3749,  0.9439, -3.2009, -0.3504,  0.7465],\n",
+      "        [ 0.1813, -0.4444, -2.5319, -0.4229, -2.7306],\n",
+      "        [ 2.9485, -2.0516, -2.5703, -2.4905,  0.6803]])\n",
+      "lin2.bias tensor([-0.3454, -1.8758, -0.7929, -2.0164, -1.1498])\n",
+      "lin3.weight tensor([[ 1.0823, -1.4615, -1.5089,  0.9010,  1.2956],\n",
+      "        [-0.0866, -1.4362,  0.0432,  1.3698, -2.1452]])\n",
+      "lin3.bias tensor([ 0.5609, -1.1269])\n",
       "\n",
       "\n"
      ]
@@ -269,7 +270,7 @@
     "]\n",
     "\n",
     "# Optimizers and stuff.\n",
-    "criterion = nn.MSELoss()                                                # MSE Loss\n",
+    "criterion = nn.MSELoss()                                                # Loss function\n",
     "optimizers = []                                                         # List of optimizers\n",
     "for model in models:\n",
     "    optimizers.append(torch.optim.Adam(model.parameters(), lr=0.5))\n",
@@ -289,7 +290,7 @@
     "        maxLoss = max(maxLoss, loss.item())\n",
     "        minLoss = min(minLoss, loss.item())\n",
     "    if minLoss == 0:\n",
-    "            break\n",
+    "        break\n",
     "    if epoch % 10 == 0:\n",
     "        print(\"Epoch: \" + str(epoch) + \", Max Loss: \" + str(maxLoss) + \", Min Loss: \" + str(minLoss))\n",
     "\n",
